Update document titles and family tree details

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <div class="document-card" onclick="openGallery(this)"><img src="https://i.postimg.cc/SxRKFw7B/בן_ציון_1.jpg" alt="עדות על בן ציון - עמוד 1" data-gallery="bentziyon"><div class="caption">עמוד 1</div></div>
             <div class="document-card" onclick="openGallery(this)"><img src="https://i.postimg.cc/vZTmFpLC/בן_ציון_2.jpg" alt="עדות על בן ציון - עמוד 2" data-gallery="bentziyon"><div class="caption">עמוד 2</div></div>
         </div>
-        <h3 class="subsection-title">גטו סמיאטיץ - עדות בכתב ידה</h3>
+        <h3 class="subsection-title">גטו סמיאטיץ </h3>
         <div class="documents-gallery">
             <div class="document-card" onclick="openGallery(this)"><img src="https://i.postimg.cc/FK1N83vq/גטו_סמיאטיץ_1.jpg" alt="גטו סמיאטיץ - עמוד 1" data-gallery="ghetto"><div class="caption">עמוד 1</div></div>
             <div class="document-card" onclick="openGallery(this)"><img src="https://i.postimg.cc/DzmnHLhp/גטו_סמיאטיץ_2.jpg" alt="גטו סמיאטיץ - עמוד 2" data-gallery="ghetto"><div class="caption">עמוד 2</div></div>
@@ -265,9 +265,9 @@
         <div class="family-tree-container">
             <div class="tree-header">
                 <h3>🌳 צאצאי חיים וחנה שוורצברג</h3>
-                <p class="tree-stats">3 ילדים • 11 נכדים • 22 נינים</p>
+                <p class="tree-stats">לבת שבע 3 ילדים • 11 נכדים • 22 נינים</p>
             </div>
-            <div class="tree-level"><div class="tree-person roots"><h4>חיים וחנה שוורצברג</h4><p>ההורים</p></div></div>
+            <div class="tree-level"><div class="tree-person roots"><h4>חיים וחנה שוורצברג</h4><p>ההורים נספו בטרבלינקה</p></div></div>
             <div class="tree-connector">▼</div>
             <div class="tree-level">
                 <div class="tree-person"><h4>בת שבע ויהודה אריאל</h4><p>3 ילדים</p></div>
