Fix HTML structure for tree-child-box elements

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <h4>👨‍👩‍👧‍👦 עמיחי ושני (נישואין ראשונים)</h4>
                 <div class="tree-children">
                     <div class="tree-child-box"><strong>נרי ותמר</strong></div>
-                    <div class="tree-child-box"><strong>חן בת ציון</strong><div class="tree-grandchildren">רווקה</div></div>
+                    <div class="tree-child-box"><strong>חן בת ציון</strong></div>
                 </div>
             </div>
             <div class="tree-branch">
