Add child boxes for הלל, שירה, and כנה

--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
             <div class="tree-branch">
                 <h4>👨‍👩‍👧‍👦 עמיחי ורינה (נישואין שניים)</h4>
                 <div class="tree-children">
+                    <div class="tree-child-box"><strong>הלל ז"ל</strong></div>
                     <div class="tree-child-box"><strong>שירה</strong></div>
                     <div class="tree-child-box"><strong>כנה</strong></div>
                 </div>
