Update family tree entries in index.html

--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
                 <h4>👨‍👩‍👧‍👦 אמירה ונחם אילן</h4>
                 <div class="tree-children">
                     <div class="tree-child-box"><strong>שריה ויניב בירנבוים</strong><div class="tree-grandchildren">► הלל, שחר, קורן, עלמה</div></div>
-                    <div class="tree-child-box"><strong>יערה וקאופמן</strong><div class="tree-grandchildren">► טל ועוד שני ילדים</div></div>
-                    <div class="tree-child-box"><strong>צרויה ונתנאל ורשבסקי</strong><div class="tree-grandchildren">► שתי בנות</div></div>
+                    <div class="tree-child-box"><strong>יערה וסער קאופמן</strong><div class="tree-grandchildren">► טל, נטע, </div></div>
+                    <div class="tree-child-box"><strong>צרויה ונתנאל ורשבסקי</strong><div class="tree-grandchildren">►עדן, מאי</div></div>
                 </div>
             </div>
             <div class="tree-branch">
