--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <h4>👨‍👩‍👧‍👦 אמירה ונחם אילן</h4>
                 <div class="tree-children">
                     <div class="tree-child-box"><strong>שריה ויניב בירנבוים</strong><div class="tree-grandchildren">► הלל, שחר, קורן, עלמה</div></div>
-                    <div class="tree-child-box"><strong>יערה וסער קאופמן</strong><div class="tree-grandchildren">► טל, נטע </div></div>
+                    <div class="tree-child-box"><strong>יערה וסער קאופמן</strong><div class="tree-grandchildren">► טל, עומר, נטע </div></div>
                     <div class="tree-child-box"><strong>צרויה ונתנאל ורשבסקי</strong><div class="tree-grandchildren">►עדן, מאי</div></div>
                 </div>
             </div>
